	PR target/42881 	* config/i386/i386.c (ix86_expand_vector_init_duplicate): 	Wrap force_reg into a sequence, emit it before user.

testsuite/
	* gcc.target/i386/pr42881.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@156320 138bc75d-0d04-0410-961f-82ee72b054a4